Update linkedin link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Aaryan Kurade</h1>
             <nav>
                 <a href="mailto:aaryankurade27@gmail.com">Email</a>
-                <a href="www.linkedin.com/in/aaryan-kurade" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/aaryan-kurade" target="_blank">LinkedIn</a>
                 <a href="https://github.com/Aaryan2304" target="_blank">GitHub</a>
                 <a href="https://medium.com/@aaryankurade0101" target="_blank">Medium</a>
             </nav>
