--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </section>
          <section id="education">
             <h2>Education</h2>
-            <p><strong>MIT World Peace University (MIT-WPU), Pune, India</strong></p>
+            <p><strong>MIT World Peace University (MIT-WPU) - Pune, India</strong></p>
             <p>B.Tech, Electronics and Communication Engineering - AI/ML (2021 - 2025)</p>
         </section>
     </main>
