--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>
-                I am an ML Engineer and a recent B.Tech graduate in Electronics and Communication Engineering from MIT World Peace University. I specialize in the end-to-end development and deployment of computer vision systems. I have a proven ability to architect robust AI/ML pipelines, containerize models for scalable inference, and integrate ethical considerations into the core of a project. I am passionate about building responsible AI and am actively seeking an internship or full-time ML Engineer role where I can contribute to building transparent and impactful solutions.
+                [cite_start]I am an ML Engineer specializing in the end-to-end development and deployment of computer vision systems[cite: 4]. [cite_start]I have a proven ability to architect robust AI/ML pipelines, containerize models for scalable inference via APIs, and integrate ethical considerations and explainability into the core of a project[cite: 5]. [cite_start]I am passionate about building responsible and transparent AI solutions and am actively seeking an internship or full-time ML Engineer role where I can contribute to building transparent and impactful solutions[cite: 6].
             </p>
         </section>
 
@@ -36,9 +36,9 @@
                 <h3>ML Engineer Intern | Utopia Optovision Pvt. Ltd.</h3>
                 <p class="experience-date">Jan 2024 - Jan 2025</p>
                 <ul>
-                    <li>Engineered and deployed an automated text extraction system using YOLO and PaddleOCR, demonstrating a strong practical understanding of AI/ML concepts.</li>
-                    <li>Applied advanced computer vision approaches, resulting in a 15% improvement in model accuracy for a key product feature.</li>
-                    <li>Streamlined data processing workflows by enhancing technical documentation and automation scripts, reducing manual effort by an estimated 20%.</li>
+                    [cite_start]<li>Engineered and Deployed an automated text extraction system using YOLO and PaddleOCR, demonstrating a strong practical understanding of AI/ML concepts and rapid prototyping techniques with Python[cite: 10].</li>
+                    [cite_start]<li>Applied advanced computer vision approaches by leveraging OCR and object detection, resulting in a 15% improvement in model accuracy for a key product feature[cite: 11].</li>
+                    [cite_start]<li>Streamlined data processing workflows by enhancing technical documentation and automation scripts, reducing manual effort by an estimated 20% and improving team efficiency[cite: 12].</li>
                 </ul>
             </div>
         </section>
@@ -48,18 +48,16 @@
             <div class="project-grid">
                 <div class="project-card">
                     <h3>Deepfake Detection</h3>
-                    <p>Engineered an end-to-end deepfake detection pipeline using PyTorch, processing video data with OpenCV to extract over 3,800 face frames. Achieved 91.2% accuracy and a 0.978 ROC-AUC score. Deployed a scalable REST API using FastAPI and Docker for real-time inference.</p>
+                    [cite_start]<p>Engineered an end-to-end deepfake detection pipeline using PyTorch, processing video data with OpenCV to extract over 3,800 face frames and achieving 91.2% accuracy and a 0.978 ROC-AUC score on a balanced test set[cite: 16]. [cite_start]Architected and Deployed a scalable REST API using FastAPI and Docker, making the detection model accessible for real-time inference and serving it via a public-facing URL on Render[cite: 17]. [cite_start]Integrated explainable AI (XAI) techniques by implementing Grad-CAM to generate visual heatmaps, increasing model transparency by highlighting the facial regions influencing its predictions[cite: 18]. [cite_start]Authored a comprehensive ethics and bias report that analyzed model performance, including false positive/negative rates (10.1%/7.4%), and outlined strategies for responsible deployment to mitigate societal risks like misinformation[cite: 19].</p>
                     <a href="https://github.com/Aaryan2304/deepfake-detection" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project-card">
-                    <h3>Automated Text Extraction System</h3>
-                    <p>Developed an automated text extraction system leveraging YOLOv8 and PaddleOCR for precise text recognition from diverse image types. Streamlined document processing by automating the extraction of key fields into structured CSV outputs.</p>
-                     <a href="https://github.com/Aaryan2304/Text-Extraction-Project" target="_blank">View on GitHub</a>
+                    <h3>Video Anomaly Detection System</h3>
+                    [cite_start]<p>Engineered a production-grade, deep-learning anomaly detection system using a PyTorch-based Convolutional Autoencoder, achieving 92.5% precision and 0.74 AUC on the UCSD Ped2 surveillance dataset[cite: 22]. [cite_start]Architected a scalable REST API using FastAPI and containerized the application with Docker, enabling real-time analysis of video streams with processing speeds of ~0.2 seconds per clip on GPU[cite: 23]. [cite_start]Implemented an end-to-end MLOps pipeline featuring adaptive thresholding for dynamic environments and automated cloud deployment to Render.com via a build.sh script and render.yaml configuration[cite: 24]. [cite_start]Developed a comprehensive solution with enterprise-ready features, including batch processing, preset security levels, and interactive API documentation, making it suitable for integration into real-world security systems[cite: 25].</p>
                 </div>
                 <div class="project-card">
-                    <h3>AI-Driven Early Detection of Cardiovascular Diseases</h3>
-                    <p>Developed an AI-driven diagnostic system for early CVD detection using heart sounds. Leveraged VGG-AttnNet, Conformer, and AST models and deployed the trained model on Google Cloud for remote inference, achieving 87% AUC diagnostic accuracy.</p>
-                     <a href="https://github.com/Aaryan2304/Heart-Sound-Classification" target="_blank">View on GitHub</a>
+                    <h3>AI-Powered Visual Search Engine</h3>
+                    [cite_start]<p>Architected and Deployed a production-ready visual search system for 100K+ fashion images with <100ms latency, leveraging CLIP embeddings and FAISS for 512-dimensional semantic similarity matching[cite: 28]. [cite_start]Engineered and Optimized a full-stack ML pipeline with FastAPI async endpoints and Streamlit UI, implementing dynamic batch processing (8-32 images) and GPU acceleration with 99%+ uptime reliability[cite: 29]. [cite_start]Implemented and Scaled advanced computer vision using PyTorch optimizations, achieving 60%+ memory efficiency across CPU/GPU environments with automatic hardware detection[cite: 30]. [cite_start]Developed and Integrated a robust testing framework with 20+ test classes, ensuring 100% code reliability through comprehensive unit testing and performance benchmarking[cite: 31].</p>
                 </div>
             </div>
         </section>
@@ -67,22 +65,22 @@
         <section id="skills">
             <h2>Technical Skills</h2>
              <ul>
-                <li><strong>Programming Languages:</strong> Python, MySQL</li>
-                <li><strong>Frameworks & Libraries:</strong> TensorFlow, PyTorch, NumPy, Pandas, Scikit-learn</li>
-                <li><strong>Specializations:</strong> Computer Vision, Natural Language Processing (NLP)</li>
-                <li><strong>Tools & Platforms:</strong> LLMs, VLM, OCR, Docker, Roboflow, CVAT, Jupyter, Git, GCP, FastAPI, OpenCV, Hugging Face</li>
+                [cite_start]<li><strong>Programming Languages:</strong> Python, MySQL [cite: 33]</li>
+                [cite_start]<li><strong>Frameworks & Libraries:</strong> TensorFlow, PyTorch, NumPy, Pandas, Scikit-learn, Matplotlib [cite: 34]</li>
+                [cite_start]<li><strong>Specializations:</strong> Computer Vision, Natural Language Processing (NLP) [cite: 35]</li>
+                [cite_start]<li><strong>Tools & Platforms:</strong> LLMS, VLM, OCR, Docker, Roboflow, CVAT, Jupyter, Git, GCP, FastAPI, Object Detection, OpenCV, Fine-tuning, Segmentation, SLAM, Reinforcement Learning, 3D Vision, Explainable AI (XAI), Generative AI, MLOps, Streamlit, Azure [cite: 36]</li>
             </ul>
         </section>
          <section id="education">
             <h2>Education</h2>
             <p><strong>MIT World Peace University (MIT-WPU) - Pune, India</strong></p>
-            <p>B.Tech, Electronics and Communication Engineering - AI/ML (2021 - 2025)</p>
+            <p>B.Tech, Electronics and Communication Engineering - AI/ML (Jun 2021 - Jun 2025)</p>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>© 2025 Aaryan Kurade. Website created with guidance from Google's AI.</p>
+            <p>© 2025 Aaryan Kurade. </p>
         </div>
     </footer>
 </body>
