--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
                 <div class="project-card">
                     <h3>Video Anomaly Detection System</h3>
                     <p>Engineered a production-grade, deep-learning anomaly detection system using a PyTorch-based Convolutional Autoencoder, achieving 92.5% precision and 0.74 AUC on the UCSD Ped2 surveillance dataset. Architected a scalable REST API using FastAPI and containerized the application with Docker, enabling real-time analysis of video streams with processing speeds of ~0.2 seconds per clip on GPU. Implemented an end-to-end MLOps pipeline featuring adaptive thresholding for dynamic environments and automated cloud deployment to Render.com via a build.sh script and render.yaml configuration. Developed a comprehensive solution with enterprise-ready features, including batch processing, preset security levels, and interactive API documentation, making it suitable for integration into real-world security systems.</p>
+                    <a href="https://github.com/Aaryan2304/cctv-video-anomaly-detection" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project-card">
                     <h3>AI-Powered Visual Search Engine</h3>
                     <p>Architected and Deployed a production-ready visual search system for 100K+ fashion images with <100ms latency, leveraging CLIP embeddings and FAISS for 512-dimensional semantic similarity matching. Engineered and Optimized a full-stack ML pipeline with FastAPI async endpoints and Streamlit UI, implementing dynamic batch processing (8-32 images) and GPU acceleration with 99%+ uptime reliability. Implemented and Scaled advanced computer vision using PyTorch optimizations, achieving 60%+ memory efficiency across CPU/GPU environments with automatic hardware detection. Developed and Integrated a robust testing framework with 20+ test classes, ensuring 100% code reliability through comprehensive unit testing and performance benchmarking.</p>
+                    <a href="https://github.com/Aaryan2304/visual-search-engine" target="_blank">View on GitHub</a>
                 </div>
             </div>
         </section>
