--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 Aaryan Kurade. Website created with guidance from Google's AI.</p>
+            <p>© 2025 Aaryan Kurade.</p>
         </div>
     </footer>
 </body>
