--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+    <button id="theme-toggle" class="theme-toggle">
+        <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
+            <path d="M12 2.25a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 0112 2.25zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.106a.75.75 0 011.06.027l1.06 1.06a.75.75 0 11-1.06 1.06l-1.06-1.06a.75.75 0 010-1.087zM3.08 18.919a.75.75 0 011.06-.027l1.06 1.06a.75.75 0 11-1.06 1.06l-1.06-1.06a.75.75 0 010-1.087zM12 21a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 0112 21zM5.106 5.106a.75.75 0 01.027 1.06l-1.06 1.06a.75.75 0 11-1.06-1.06l1.06-1.06a.75.75 0 011.06 0zM21.75 12a.75.75 0 01-1.5 0H18a.75.75 0 010-1.5h2.25a.75.75 0 01.75.75zM4.5 12a.75.75 0 01-1.5 0H.75a.75.75 0 010-1.5h2.25a.75.75 0 01.75.75z"/>
+        </svg>
+        <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
+            <path fill-rule="evenodd" d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.949.75.75 0 01.981.981A10.503 10.503 0 0118 21a10.5 10.5 0 01-10.5-10.5c0-4.368 2.667-8.112 6.46-9.672a.75.75 0 01.818.162z" clip-rule="evenodd"/>
+        </svg>
+    </button>
+    
     <header>
         <div class="container">
             <h1>Aaryan Kurade</h1>
@@ -19,12 +28,6 @@
                 <a href="https://www.linkedin.com/in/aaryan-kurade" target="_blank">LinkedIn</a>
                 <a href="https://github.com/Aaryan2304" target="_blank">GitHub</a>
                 <a href="https://medium.com/@aaryankurade0101" target="_blank">Medium</a>
-                <div class="theme-switch-wrapper">
-                    <label class="theme-switch" for="checkbox">
-                        <input type="checkbox" id="checkbox" />
-                        <div class="slider round"></div>
-                    </label>
-                </div>
             </nav>
         </div>
     </header>
@@ -40,7 +43,7 @@
         <section id="experience" class="fade-in">
             <h2>Professional Experience</h2>
             <div class="experience-card">
-                <h3>Machine Learning Engineer - Intern | Utopia Optovision Pvt. Ltd.</h3>
+                <h3>ML Engineer Intern | Utopia Optovision Pvt. Ltd.</h3>
                 <p class="experience-date">Jan 2024 - Jan 2025</p>
                 <ul>
                     <li>Engineered and Deployed an automated text extraction system using YOLO and PaddleOCR, demonstrating a strong practical understanding of AI/ML concepts and rapid prototyping techniques with Python.</li>
@@ -110,7 +113,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 Aaryan Kurade.</p>
+            <p>© 2025 Aaryan Kurade. Website created with guidance from Google's AI.</p>
         </div>
     </footer>
     <script>
@@ -131,27 +134,23 @@
         });
 
         // Dark/Light mode toggle logic
-        const toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
+        const themeToggle = document.getElementById('theme-toggle');
         const currentTheme = localStorage.getItem('theme');
 
         if (currentTheme) {
             document.documentElement.setAttribute('data-theme', currentTheme);
-            if (currentTheme === 'dark') {
-                toggleSwitch.checked = true;
-            }
         }
 
-        function switchTheme(e) {
-            if (e.target.checked) {
-                document.documentElement.setAttribute('data-theme', 'dark');
-                localStorage.setItem('theme', 'dark');
-            } else {
+        themeToggle.addEventListener('click', () => {
+            let theme = document.documentElement.getAttribute('data-theme');
+            if (theme === 'dark') {
                 document.documentElement.setAttribute('data-theme', 'light');
                 localStorage.setItem('theme', 'light');
+            } else {
+                document.documentElement.setAttribute('data-theme', 'dark');
+                localStorage.setItem('theme', 'dark');
             }
-        }
-
-        toggleSwitch.addEventListener('change', switchTheme, false);
+        });
     </script>
 </body>
 </html>
