--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section id="experience" class="fade-in">
             <h2>Professional Experience</h2>
             <div class="experience-card">
-                <h3>ML Engineer Intern | Utopia Optovision Pvt. Ltd.</h3>
+                <h3>Machine Learning Engineer - Intern | Utopia Optovision Pvt. Ltd.</h3>
                 <p class="experience-date">Jan 2024 - Jan 2025</p>
                 <ul>
                     <li>Engineered and Deployed an automated text extraction system using YOLO and PaddleOCR, demonstrating a strong practical understanding of AI/ML concepts and rapid prototyping techniques with Python.</li>
@@ -113,7 +113,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 Aaryan Kurade. Website created with guidance from Google's AI.</p>
+            <p>© 2025 Aaryan Kurade.</p>
         </div>
     </footer>
     <script>
