Add Tableau and update tools/platforms list

--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
             <h2>Technical Skills</h2>
              <ul>
                 <li><strong>Programming Languages:</strong> Python, MySQL</li>
-                <li><strong>Frameworks & Libraries:</strong> TensorFlow, PyTorch, NumPy, Pandas, Scikit-learn, Matplotlib</li>
+                <li><strong>Frameworks & Libraries:</strong> TensorFlow, PyTorch, NumPy, Pandas, Scikit-learn, Matplotlib, Tableau</li>
                 <li><strong>Specializations:</strong> Computer Vision, Natural Language Processing (NLP)</li>
-                <li><strong>Tools & Platforms:</strong> LLMs, VLM, OCR, Docker, Roboflow, CVAT, Jupyter, Git, GCP, FastAPI, Object Detection, OpenCV, Fine-tuning, Segmentation, SLAM, Reinforcement Learning, 3D Vision, Explainable AI (XAI), Generative AI, MLOps, Streamlit, Azure</li>
+                <li><strong>Tools & Platforms:</strong> OpenCV, LLMs, VLM, OCR, Docker, Streamlit, FastAPI, 3D Vision, Git, CUDA, Object Detection, MLOps, Roboflow, CVAT, Jupyter, GCP, Fine-tuning, LangGraph, Reinforcement Learning, Explainable AI (XAI), Generative AI, SLAM</li>
+                <li><strong>Language Proficiency:</strong> English: Full Professional Proficiency
             </ul>
         </section>
          <section id="education" class="fade-in">
