Add experience section for Software Engineer role

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                     <li>Streamlined data processing workflows by enhancing technical documentation and automation scripts, reducing manual effort by an estimated 20% and improving team efficiency.</li>
                 </ul>
             </div>
+            <div class="experience-card">
+                <h3>Software Engineer | Arakoo.ai </h3>
+                <p class="experience-date">Aug 2025 - Nov 2025</p>
+                <ul>
+                    <li>Worked on voice models for tasks like Speach Recognition, Speaker Diarization, Voice Activity Detection and ASR.</li>
+                </ul>
+            </div>
         </section>
 
         <section id="projects" class="fade-in">
