Update skills list in index.html

--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
                         <ul>
                             <li>Python</li>
                             <li>SQL / MySQL</li>
-                            <li>C++ (CUDA)</li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h4>AI Frameworks</h4>
                         <ul>
                             <li>PyTorch</li>
+                            <li>OpenCV</li>
                             <li>TensorFlow</li>
-                            <li>Scikit-learn</li>
                             <li>LangGraph</li>
+                            <li>Tableau</li>
                         </ul>
                     </div>
                     <div class="skill-category">
@@ -151,15 +151,18 @@
                             <li>FastAPI</li>
                             <li>GCP</li>
                             <li>Git & CI/CD</li>
+                            <li>Streamlit</li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h4>Specialization</h4>
                         <ul>
                             <li>Computer Vision</li>
-                            <li>NLP / LLMs</li>
-                            <li>Generative AI</li>
-                            <li>OpenCV</li>
+                            <li>NLP</li>
+                            <li>LLMs / VLMs</li>
+                            <li>3D Vision</li>
+                            <li>OCR</li>
+                            <li>Object Detection/Instance Segmentation/Pose Estimation/Image Classification</li>
                         </ul>
                     </div>
                 </div>
