Revise profile and project descriptions for clarity

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h2>About Me</h2>
                 <div class="tech-card about-card tilt-card">
                     <p style="font-size: 1.1rem; margin: 0;">
-                        I am an ML Engineer specializing in the end-to-end development and deployment of computer vision systems. I have a proven ability to architect robust AI/ML pipelines, containerize models for scalable inference via APIs, and integrate ethical considerations and explainability into the core of a project. I am passionate about building responsible and transparent AI solutions.
+                        I am an AI/ML Engineer specialized in architecting high-performance Computer Vision systems and Agentic AI workflows. Expert in building autonomous systems using LangGraph and Agentic RAG, while optimizing vision models via ONNX for real-time inference. Proven track record in deploying scalable, non-blocking backends using FastAPI and Docker, with a focus on system observability and hardware-efficient execution.
                     </p>
                 </div>
             </div>
@@ -58,22 +58,24 @@
                             <span class="exp-date">Jan 2024 - Jan 2025</span>
                         </div>
                         <ul class="tech-list">
-                            <li>Engineered and Deployed an automated text extraction system using YOLO and PaddleOCR.</li>
-                            <li>Applied advanced computer vision approaches by leveraging OCR and object detection (15% accuracy boost).</li>
-                            <li>Streamlined data processing workflows, reducing manual effort by 20%.</li>
+                            <li>Deployed YOLO + OCR pipeline for automated document text extraction, processing 2,000+ invoices daily.</li>
+                            <li>Reduced OCR error rate from 18% to 7% through image preprocessing (deskewing, contrast normalization).</li>
+                            <li>Applied advanced computer vision approaches by leveraging OCR and object detection, resulting in a 15% improvement in model accuracy for a key product feature.</li>
                         </ul>
                     </div>
 
                     <div class="tech-card tilt-card">
                         <div class="experience-header">
                             <div>
-                                <h3>Software Engineer</h3>
+                                <h3>Software Engineer - Intern</h3>
                                 <span class="company-name">Arakoo.ai</span>
                             </div>
                             <span class="exp-date">Aug 2025 - Nov 2025</span>
                         </div>
                         <ul class="tech-list">
-                            <li>Worked on voice models for tasks like Speech Recognition, Speaker Diarization, Voice Activity Detection and ASR.</li>
+                            <li>Built real-time ASR pipeline with Voice Activity Detection, reducing false transcription triggers by 40% via signal preprocessing.</li>
+                            <li>Deployed speaker diarization module using FastAPI async endpoints handling 50+ concurrent audio streams.</li>
+                            <li>Implemented prompt caching strategies cutting LLM inference costs by $0.02/minute of audio processed.</li>
                         </ul>
                     </div>
                 </div>
@@ -83,11 +85,11 @@
         <section id="projects" style="margin-bottom: 8rem;">
             <div class="reveal-element">
                 <p class="subtitle">04 // Portfolio</p>
-                <h2>Selected Projects</h2>
+                <h2>Featured Projects</h2>
                 <div class="project-grid">
                     <div class="tech-card project-card tilt-card">
                         <h3>Deepfake Detection</h3>
-                        <p>PyTorch pipeline achieving 91.2% accuracy with Grad-CAM integration for explainability.</p>
+                        <p>Real-time binary classifier using EfficientNet-B0 and MTCNN. Features a scalable REST API and a comprehensive ethics report on responsible AI deployment.</p>
                         <div class="tags">
                             <span class="tag">PyTorch</span>
                             <span class="tag">FastAPI</span>
@@ -99,7 +101,7 @@
 
                     <div class="tech-card project-card tilt-card">
                         <h3>Video Anomaly Detection</h3>
-                        <p>Production-grade autoencoder system (92.5% precision) for real-time CCTV analysis.</p>
+                        <p>Non-blocking video processing pipeline using Convolutional Autoencoders. Engineered to handle high-bitrate streams without timeout errors.</p>
                         <div class="tags">
                             <span class="tag">PyTorch</span>
                             <span class="tag">Autoencoder</span>
@@ -110,11 +112,12 @@
 
                     <div class="tech-card project-card tilt-card">
                         <h3>Visual Search Engine</h3>
-                        <p>Sub-100ms latency search for 100k+ fashion images using CLIP and FAISS.</p>
+                        <p>Deployed semantic search for 100K fashion images using CLIP embeddings + FAISS. Optimized for production with GPU acceleration and hardware detection.</p>
                         <div class="tags">
+                            <span class="tag">Pytorch</span>
                             <span class="tag">CLIP</span>
                             <span class="tag">FAISS</span>
-                            <span class="tag">Streamlit</span>
+                            <span class="tag">Docker</span>
                         </div>
                         <a href="https://github.com/Aaryan2304/visual-search-engine" target="_blank" class="project-link">View on GitHub &rarr;</a>
                     </div>
@@ -177,7 +180,7 @@
                     <div class="experience-header">
                         <div>
                             <h3>MIT World Peace University</h3>
-                            <p style="margin:0; color: var(--primary-neon);">B.Tech, ECE - AI/ML</p>
+                            <p style="margin:0; color: var(--primary-neon);">B.Tech, Electronics & Communication Engineering - AI/ML</p>
                         </div>
                         <span class="exp-date">Jun 2021 - Jun 2025</span>
                     </div>
@@ -188,7 +191,7 @@
     </div>
 
     <footer>
-        <p>Designed & Engineered by Aaryan Kurade © 2025</p>
+        <p>Designed & Engineered by Aaryan Kurade © 2026</p>
     </footer>
 
     <script>
