--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h4><i class="fas fa-code"></i> Languages & Core</h4>
                     <ul>
                         <li>Python</li>
-                        <li>SQL / MySQL</li>
+                        <li>MySQL</li>
                     </ul>
                 </div>
 
@@ -70,7 +70,7 @@
                         <li>PyTorch, TensorFlow</li>
                         <li>YOLO, RF-DETR, CNNs, ONNX</li>
                         <li>OpenCV, OCR</li>
-                        <li>VLMs</li>
+                        <li>VLMs, 3D Vision</li>
                         <li>Object Detection, Segmentation, Classification, Keypoint Detection</li>
                     </ul>
                 </div>
@@ -82,7 +82,7 @@
                         <li>Agentic RAG</li>
                         <li>Hugging Face Transformers</li>
                         <li>Vector DBs (Pinecone/Chroma)</li>
-                        <li>vLLM, LoRA / PEFT, INT8 / INT4 Quantization and Pruning</li>
+                        <li>vLLM, LoRA / PEFT, Mixed-precision (AMP)</li>
                     </ul>
                 </div>
 
@@ -90,10 +90,10 @@
                     <h4><i class="fas fa-server"></i> MLOps & Backend</h4>
                     <ul>
                         <li>Docker, FastAPI</li>
-                        <li>GCP, Linux</li>
+                        <li>Linux</li>
                         <li>Git & CI/CD</li>
                         <li>Prometheus, Streamlit</li>
-                        <li>Quantization (INT8/INT4)</li>
+                        <li>Quantization (INT8/INT4) & Pruning</li>
                     </ul>
                 </div>
 
@@ -136,7 +136,6 @@
                 <!-- Project 2: Video Anomaly -->
                 <div class="tech-card project-card tilt-card">
                     <h3>Video Anomaly Detection</h3>
-                    
                     <a href="https://github.com/Aaryan2304/cctv-video-anomaly-detection" target="_blank" class="github-icon-link" title="View on GitHub">
                         <i class="fab fa-github"></i>
                     </a>
@@ -159,8 +158,7 @@
 
                 <!-- Project 3: Deepfake -->
                 <div class="tech-card project-card tilt-card">
-                    <h3>Deepfake Detection</h3>
-                    
+                    <h3>Deepfake Detection</h3> 
                     <a href="https://github.com/Aaryan2304/deepfake-detection" target="_blank" class="github-icon-link" title="View on GitHub">
                         <i class="fab fa-github"></i>
                     </a>
