Add Computer Vision Bootcamp certification

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
                 <ul class="tech-list" style="margin: 0;">
                     <li>AI Agents Fundamentals - HuggingFace</li>
                     <li>Google Cloud Computing Foundations - NPTEL</li>
+                    <li>Computer Vision Bootcamp - OpenCV</li>
                 </ul>
             </div>
         </div>
