Update open source contributor link to Roboflow
Replaced link to Ultralytics with Roboflow in the open source section.

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <div class="tech-card">
                 <p style="font-size: 1.1rem; margin: 0;">
                     Active contributor to 
-                    <a href="https://github.com/ultralytics/ultralytics" target="_blank" style="color: var(--primary-neon); text-decoration: none; border-bottom: 1px solid var(--primary-neon); transition: border-color 0.3s;">Ultralytics</a>, 
+                    <a href="https://github.com/roboflow" target="_blank" style="color: var(--primary-neon); text-decoration: none; border-bottom: 1px solid var(--primary-neon); transition: border-color 0.3s;">Roboflow</a>, 
                     <a href="https://github.com/huggingface" target="_blank" style="color: var(--primary-neon); text-decoration: none; border-bottom: 1px solid var(--primary-neon); transition: border-color 0.3s;">HuggingFace</a>, 
                     and computer vision libraries. Contributing to open-source tools that democratize AI and make CV accessible to developers worldwide.
                 </p>
