--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         <!-- 3. Updated Nav with Icons -->
         <nav class="reveal-element">
-            <a href="mailto:aaryankurade27@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+            <a href="/cdn-cgi/l/email-protection#0d6c6c7f746c6366787f6c69683f3a4d6a606c6461236e6260" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="https://www.linkedin.com/in/aaryan-kurade" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Aaryan2304" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
             <a href="https://medium.com/@aaryankurade0101" target="_blank" title="Medium"><i class="fab fa-medium"></i></a>
@@ -215,13 +215,21 @@
                     <h4><i class="fas fa-eye"></i> Computer Vision</h4>
                     <ul>
                         <li>YOLO, RT-DETR, SAM, VLMs</li>
-                        <li>Object Detection, Segmentation, Classification</li>
-                        <li>Pose/Keypoint Estimation, 3D Vision</li>
-                        <li>Geospatial AI, SigLIP</li>
+                        <li>Object Detection, Segmentation, Classification, Pose/Keypoint Estimation</li>
+                        <li>Geospatial AI</li>
                         <li>Multi-Object Tracking (ByteTrack, DeepSORT, Kalman Filter)</li>
-                        <li>OCR (PaddleOCR, Tesseract)</li>
+                        <li>OCR (PaddleOCR, Tesseract, EasyOCR)</li>
                         <li>Homography, Feature Matching</li>
-                        <li>Roboflow, CVAT, Supervisely, QGIS, ArcGIS (Geospatial)</li>
+                        <li>3D Vision</li>
+                    </ul>
+                </div>
+
+                <div class="skill-category">
+                    <h4><i class="fas fa-database"></i> Data & Annotation</h4>
+                    <ul>
+                        <li>Roboflow, CVAT, Supervisely</li>
+                        <li>QGIS, ArcGIS (Geospatial)</li>
+                        <li>COCO, YOLO, Pascal VOC, GeoTIFF, Shapefile formats</li>
                     </ul>
                 </div>
 
@@ -251,7 +259,6 @@
                         <li>Docker, FastAPI</li>
                         <li>Git, Streamlit</li>
                         <li>Prometheus Monitoring</li>
-                        <li>Async Processing</li>
                     </ul>
                 </div>
 
@@ -308,7 +315,7 @@
     <p>Designed & Engineered by Aaryan Kurade © 2026</p>
 </footer>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 // --- 1. Staggered Reveal Animation ---
 document.addEventListener("DOMContentLoaded", () => {
 const reveals = document.querySelectorAll('.reveal-element');
@@ -475,12 +482,4 @@ renderer.render(scene, camera);
 };
 animate();
 window.addEventListener('resize', () => {
-camera.aspect = window.innerWidth / window.innerHeight;
-camera.updateProjectionMatrix();
-renderer.setSize(window.innerWidth, window.innerHeight);
-});
-};
-initThreeJS();
-</script>
-</body>
-</html>
+camera.aspect = window.innerWidth / win
