Update skill categories and add new technologies
Consolidated skills in Computer Vision and added new skills in Data & Annotation.

--- a/index.html
+++ b/index.html
@@ -215,13 +215,21 @@
                     <h4><i class="fas fa-eye"></i> Computer Vision</h4>
                     <ul>
                         <li>YOLO, RT-DETR, SAM, VLMs</li>
-                        <li>Object Detection, Segmentation, Classification</li>
-                        <li>Pose/Keypoint Estimation, 3D Vision</li>
-                        <li>Geospatial AI, SigLIP</li>
+                        <li>Object Detection, Segmentation, Classification, Pose/Keypoint Estimation</li>
+                        <li>Geospatial AI</li>
                         <li>Multi-Object Tracking (ByteTrack, DeepSORT, Kalman Filter)</li>
-                        <li>OCR (PaddleOCR, Tesseract)</li>
+                        <li>OCR (PaddleOCR, Tesseract, EasyOCR)</li>
                         <li>Homography, Feature Matching</li>
-                        <li>Roboflow, CVAT, Supervisely, QGIS, ArcGIS (Geospatial)</li>
+                        <li>3D Vision</li>
+                    </ul>
+                </div>
+
+                <div class="skill-category">
+                    <h4><i class="fas fa-database"></i> Data & Annotation</h4>
+                    <ul>
+                        <li>Roboflow, CVAT, Supervisely</li>
+                        <li>QGIS, ArcGIS (Geospatial)</li>
+                        <li>COCO, YOLO, Pascal VOC, GeoTIFF, Shapefile formats</li>
                     </ul>
                 </div>
 
@@ -251,7 +259,6 @@
                         <li>Docker, FastAPI</li>
                         <li>Git, Streamlit</li>
                         <li>Prometheus Monitoring</li>
-                        <li>Async Processing</li>
                     </ul>
                 </div>
 
